tests/Record/expected
[<"Bob", 12, "blue"]

"Bob"
12
Error: Can't find an implementation for Field StudentSchema "grade" ?type.

(Interactive):1:11--1:18
 1 |     value "grade" exampleRecord
               ^^^^^^^

Error: Multiple solutions found in search of:
    Field [<("x" :! Nat), ("x" :! String)] "x" ?type

(Interactive):1:11--1:14
 1 |     value "x" ambiguousRecord
               ^^^

Possible correct results:
    Here
    There Here
0
"Hello, world"

"Bob"
12
Error: Can't find an implementation
for HasIndex StudentSchema (There (There (There (There ?sa)))) 3.

(Interactive):1:11--1:12
 1 |     value 3 exampleRecord
               ^


[<"Bob", "blue"]
[<"Bob", 12]

[<"Bob", 12, "blue"]

[<"Bob", False, "blue"]

[<"Bob", 13, "blue"]

[<"Bob", 12, "blue"]

[<"Bob", 13, Nothing]

[<"Bob", "blue"]
[<"Bob", 12]
Error: Can't find an implementation for Field StudentSchema "grade" ?type.

(Interactive):1:15--1:22
 1 |     dropField "grade" exampleRecord
                   ^^^^^^^


[<"Bob"]
[<"Bob"]

[<"Bob", 12, "blue", 8, 9]

True
False

LT
EQ
GT

GT
EQ
LT

